tests/ui/pattern/enum-struct-pattern-mismatch-15896.stderr
error[E0308]: mismatched types
  --> $DIR/enum-struct-pattern-mismatch-15896.rs:13:11
   |
LL |     let u = match e {
   |                   - this expression has type `E`
LL |         E::B(
LL |           Tau{t: x},
   |           ^^^^^^^^^ expected `R`, found `Tau`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
